--- a/text.html
+++ b/text.html
@@ -5,7 +5,7 @@ Example of make a text B,I,U
 </title>  
 </Head>  
 <Body>   
-<b> [This text is Bold......] </b>  
+<b> [hello......] </b>  
 <I> [This text is Italic......] </I>  
 <U> [This text is Underline......] </U>   
 </Body>  
